--- a/app/views/spree/admin/item_refunds/_form.html.erb
+++ b/app/views/spree/admin/item_refunds/_form.html.erb
@@ -1,55 +1,18 @@
 <div data-hook="admin_item_refund_form_fields">
-  <table class="table table-condensed table-bordered index return-items-table">
-    <thead>
-      <tr data-hook="rma_header">
-        <th>
-          <% if @item_refund.editable? %>
-            <%= check_box_tag 'select-all' %>
-          <% end %>
-        </th>
-        <th><%= Spree.t(:product) %></th>
-        <th><%= Spree.t(:state) %></th>
-        <th><%= Spree.t(:charged) %></th>
-        <th><%= Spree.t(:pre_tax_refund_amount) %></th>
-      </tr>
-    </thead>
-    <tbody>
+  <% unless @item_refund.item_refund_units.empty? %>
+    <h2>Selected</h2>
+    <%= render partial: 'form_item_refund_units',
+               locals: { f: f,
+                         checked: true,
+                         item_refund_units: @item_refund.item_refund_units } %>
+  <% end %>
 
-      <%= f.fields_for :item_refund_units, @form_item_refund_units do |item_fields| %>
-        <% # binding.pry %>
-        <% unit = item_fields.object %>
-        <% inventory_unit = unit.inventory_unit %>
-        <% editable = unit.inventory_unit.on_hand? %>
-        <tr>
-          <td class="inventory-unit-checkbox">
-            <% if editable %>
-              <%= item_fields.hidden_field :inventory_unit_id %>
-              <%= item_fields.check_box :_destroy, { checked: unit.persisted?, class: 'add-item', "data-price" => unit.pre_tax_amount }, '0', '1' %>
-            <% end %>
-          </td>
-          <td>
-            <div class="variant-name"><%= inventory_unit.variant.name %></div>
-            <div class="variant-options"><%= inventory_unit.variant.options_text %></div>
-          </td>
-          <td><%= inventory_unit.state.humanize %></td>
-          <td>
-            <%= unit.display_pre_tax_amount %>
-          </td>
-          <td>
-            <% if editable %>
-              <%= item_fields.text_field :pre_tax_amount,
-                                         { class: 'refund-amount-input form-control' } %>
-            <% else %>
-              <%= unit.display_pre_tax_amount %>
-            <% end %>
-          </td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-
-  <%= f.field_container :amount, class: ['alert alert-info'] do %>
-    <%= Spree.t(:total_pre_tax_refund) %>: <span id="total_pre_tax_refund">0.00</span>
+  <% unless @form_new_item_refund_units.empty? %>
+    <h2>Available</h2>
+    <%= render partial: 'form_item_refund_units',
+               locals: { f: f,
+                         checked: false,
+                         item_refund_units: @form_new_item_refund_units } %>
   <% end %>
 
   <%= f.field_container :reason, class: ['form-group'] do %>
