--- a/app/views/spree/admin/item_refunds/edit.html.erb
+++ b/app/views/spree/admin/item_refunds/edit.html.erb
@@ -1,6 +1,6 @@
 <% content_for :page_actions do %>
-  <% if @item_refund.can_cancel? %>
-    <%= button_link_to Spree.t('actions.cancel'), fire_admin_order_item_refund_url(@order, @item_refund, e: 'cancel'), method: :put, data: { confirm: Spree.t(:are_you_sure) }, icon: "delete" %>
+  <% if @item_refund.editable? %>
+    <%= button_link_to Spree.t('actions.cancel'), fire_admin_order_item_refund_url(@order, @item_refund, e: 'destroy'), method: :put, data: { confirm: Spree.t(:are_you_sure) }, icon: "delete" %>
   <% end %>
 <% end %>
 
