--- a/app/views/spree/admin/item_refunds/_form.html.erb
+++ b/app/views/spree/admin/item_refunds/_form.html.erb
@@ -1,18 +1,25 @@
 <div data-hook="admin_item_refund_form_fields">
   <% unless @item_refund.item_refund_units.empty? %>
-    <h2>Selected</h2>
+    <h2>Selected items</h2>
     <%= render partial: 'form_item_refund_units',
                locals: { f: f,
                          checked: true,
                          item_refund_units: @item_refund.item_refund_units } %>
   <% end %>
 
-  <% unless @form_new_item_refund_units.empty? %>
-    <h2>Available</h2>
+  <% unless !@item_refund.editable? || @form_new_item_refund_units.empty? %>
+    <h2>Available items</h2>
     <%= render partial: 'form_item_refund_units',
                locals: { f: f,
                          checked: false,
                          item_refund_units: @form_new_item_refund_units } %>
+  <% end %>
+
+  <% if @item_refund.prepared? %>
+    <%= f.field_container :totals, class: ['form-group'] do %>
+      <%= f.label :total_refund_amount %>
+      <p><%= @item_refund.display_total %></p>
+    <% end %>
   <% end %>
 
   <%= f.field_container :reason, class: ['form-group'] do %>
@@ -26,7 +33,7 @@
 
   <%= f.field_container :description, class: ['form-group'] do %>
     <%= f.label :description, Spree.t(:description) %>
-    <%= f.text_area :description, :class => 'form-control' %>
+    <%= f.text_area :description, class: 'form-control' %>
     <%= f.error_message_on :description %>
   <% end %>
 </div>
