--- a/app/views/spree/admin/item_refunds/_form.html.erb
+++ b/app/views/spree/admin/item_refunds/_form.html.erb
@@ -22,13 +22,36 @@
     <% end %>
   <% end %>
 
-  <%= f.field_container :reason, class: ['form-group'] do %>
-    <%= f.label :reason, Spree.t(:reason) %>
-    <%= f.select :item_refund_reason_id,
-                 @reasons.collect{ |r| [r.name, r.id] },
-                 { include_blank: true },
-                 { class: 'select2', "data-placeholder" => Spree.t(:select_an_item_refund_reason) } %>
-    <%= f.error_message_on :reason %>
+  <% if @item_refund.editable? %>
+    <%= f.field_container :reason, class: ['form-group'] do %>
+      <%= f.label :reason, Spree.t(:reason) %>
+      <%= f.select :item_refund_reason_id,
+                   @reasons.collect{ |r| [r.name, r.id] },
+                   { include_blank: true },
+                   { class: 'select2', "data-placeholder" => Spree.t(:select_an_item_refund_reason) } %>
+      <%= f.error_message_on :reason %>
+    <% end %>
+  <% else %>
+    <%= f.field_container :item_refund_reason_id, class: ['form-group'] do %>
+      <%= f.label :reason %>
+      <p><%= @item_refund.reason.name %></p>
+    <% end %>
+  <% end %>
+
+  <% if @item_refund.editable? %>
+    <%= f.field_container :refund_type, class: ['form-group'] do %>
+      <%= f.label :refund_type, Spree.t(:refund_type) %>
+      <%= f.select :refund_type,
+                   @refund_type_options,
+                   { include_blank: true },
+                   { class: 'select2', "data-placeholder" => Spree.t(:select_a_refund_type) } %>
+      <%= f.error_message_on :refund_type %>
+    <% end %>
+  <% else %>
+    <%= f.field_container :refund_type, class: ['form-group'] do %>
+      <%= f.label :refund_type %>
+      <p><%= @item_refund.refund_type.demodulize.titleize %></p>
+    <% end %>
   <% end %>
 
   <%= f.field_container :description, class: ['form-group'] do %>
