--- a/app/views/spree/admin/item_refunds/_form_item_refund_units.html.erb
+++ b/app/views/spree/admin/item_refunds/_form_item_refund_units.html.erb
@@ -1,12 +1,14 @@
 <table class="table table-condensed table-bordered index return-items-table">
   <thead>
     <tr data-hook="item_refund_header">
-      <th></th>
+      <% if @item_refund.editable? %>
+        <th></th>
+      <% end %>
       <th><%= Spree.t(:product) %></th>
       <th><%= Spree.t(:state) %></th>
       <th><%= Spree.t(:charged) %></th>
       <th><%= Spree.t(:pre_tax_refund_amount) %></th>
-      <% if @item_refund.prepared? %>
+      <% if !@item_refund.editable? %>
         <th><%= Spree.t(:tax_amount) %></th>
         <th><%= Spree.t(:total) %></th>
       <% end %>
@@ -18,12 +20,12 @@
       <% inventory_unit = unit.inventory_unit %>
       <% editable = @item_refund.editable? && unit.inventory_unit.on_hand? %>
       <tr>
-        <td class="inventory-unit-checkbox">
-          <% if editable %>
+        <% if editable %>
+          <td class="inventory-unit-checkbox">
             <%= item_fields.hidden_field :inventory_unit_id %>
             <%= item_fields.check_box :_destroy, { checked: checked, class: 'add-item', "data-price" => unit.pre_tax_amount }, '0', '1' %>
-          <% end %>
-        </td>
+          </td>
+      <% end %>
         <td>
           <div class="variant-name"><%= inventory_unit.variant.name %></div>
           <div class="variant-options"><%= inventory_unit.variant.options_text %></div>
@@ -40,7 +42,7 @@
             <%= unit.display_pre_tax_amount %>
           <% end %>
         </td>
-        <% if @item_refund.prepared? %>
+        <% if !@item_refund.editable? %>
           <td><%= unit.display_tax %></td>
           <td><%= unit.display_total %></td>
         <% end %>
