Shipment cancelation adjustments, Configuration added, Use cases

--- a/app/views/spree/admin/item_refunds/_form.html.erb
+++ b/app/views/spree/admin/item_refunds/_form.html.erb
@@ -22,7 +22,7 @@
     <% end %>
 
     <%= f.field_container :total_refund_amount_including_shipments, class: ['form-group'] do %>
-      <%= f.label :total_refund_amount %><br>
+      <%= f.label :total_refund_amount_including_shipments %><br>
       <%= @item_refund.display_total %>
     <% end %>
   <% end %>
