--- a/app/views/spree/admin/item_refunds/_form_item_refund_units.html.erb
+++ b/app/views/spree/admin/item_refunds/_form_item_refund_units.html.erb
@@ -31,6 +31,7 @@
         <td>
           <div class="variant-name"><%= inventory_unit.variant.name %></div>
           <div class="variant-options"><%= inventory_unit.variant.options_text %></div>
+          <div class="variant-options"><%= inventory_unit.variant.sku %></div>
         </td>
         <td><%= inventory_unit.state.humanize %></td>
         <% if @item_refund.editable? %>
